# presence

./: .env  pyproject.toml
presence/: main.py
presence/models/: presence.py
presence/utils/: connect_scylla.py  socket_manager.py
